--- a/src/global.scss
+++ b/src/global.scss
@@ -15,9 +15,43 @@ body {
 	height: 64px;
 }
 .header__currency {
-	color: rgb(3, 177, 3);
+	color: rgb(105, 159, 37);
 }
 .main {
 	background-color: black;
-	height: 100vh;
+	height: 80vh;
+}
+.main__fields {
+	width: 800px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #303030;
+	padding: 30px;
+	border-radius: 30px;
+}
+.main__field:first-child {
+	margin-bottom: 70px;
+}
+.main__select {
+	background-color: rgba(0, 0, 0, 0);
+	width: 150px;
+	border: none;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+	border-radius: 0px;
+	color: white;
+	padding: 15px;
+	cursor: pointer;
+	background-image: url(./assets/img/up-arrow-svgrepo-com.svg);
+	&:hover {
+		transition: 0.3s ease all;
+		border-bottom: 1px solid rgba(255, 255, 255);
+	}
+	&:focus {
+		box-shadow: none;
+	}
+}
+.footer__nav {
+	--bs-nav-link-padding-x: none;
 }
