--- a/src/components/currecnyInput/currencyInput.scss
+++ b/src/components/currecnyInput/currencyInput.scss
@@ -1,6 +1,3 @@
-.main__field {
-	justify-content: center;
-}
 .main__select-option {
 	background: rgb(91, 91, 91);
 }
@@ -8,11 +5,12 @@
 	background-color: rgba(0, 0, 0, 0);
 	border: none;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.12);
-	width: 250px;
+	width: 100%;
 	border-radius: 0px;
 	padding: 15px;
 	color: white;
 	cursor: pointer;
+	margin-left: 10px;
 	&:focus {
 		background-color: rgba(0, 0, 0, 0);
 		box-shadow: none;
