--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,4 @@
+//there are globals and styles that change default bootstrap styles
 @font-face {
 	font-family: "Open-Sans-SB";
 	src: url(./assets/fonts/OpenSans-SemiBold.ttf);
@@ -6,8 +7,12 @@
 	font-family: "Open-Sans-R";
 	src: url(./assets/fonts/OpenSans-Regular.ttf);
 }
+.wrapper {
+	min-height: 100vh;
+}
 body {
 	font-family: "Open-Sans-SB";
+	min-width: 340px;
 }
 .header__nav {
 	--bs-nav-link-color: rgba(255, 255, 255, 0.696);
@@ -17,23 +22,7 @@ body {
 .header__currency {
 	color: rgb(105, 159, 37);
 }
-.main {
-	background-color: black;
-	height: 80vh;
-}
-.main__fields {
-	width: 800px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: #303030;
-	padding: 30px;
-	border-radius: 30px;
-}
-.main__field:first-child {
-	margin-bottom: 70px;
-}
+
 .main__select {
 	background-color: rgba(0, 0, 0, 0);
 	width: 150px;
@@ -54,4 +43,15 @@ body {
 }
 .footer__nav {
 	--bs-nav-link-padding-x: none;
+}
+.footer__link {
+	color: rgb(105, 159, 37);
+	padding-top: 15px;
+	margin-right: 15px;
+	&:hover {
+		color: white;
+	}
+}
+.offcanvas {
+	background-color: black;
 }
