--- a/src/global.scss
+++ b/src/global.scss
@@ -22,7 +22,12 @@ body {
 .header__currency {
 	color: rgb(105, 159, 37);
 }
-
+.nav {
+	--bs-nav-link-hover-color: white;
+}
+.navbar-nav .nav-link.active {
+	color: white;
+}
 .main__select {
 	background-color: rgba(0, 0, 0, 0);
 	width: 150px;
