--- a/src/global.scss
+++ b/src/global.scss
@@ -37,7 +37,7 @@ body {
 	color: white;
 	padding: 15px;
 	cursor: pointer;
-	background-image: url(./assets/img/up-arrow-svgrepo-com.svg);
+	background-image: url(./assets/img/arrowdown.svg);
 	&:hover {
 		transition: 0.3s ease all;
 		border-bottom: 1px solid rgba(255, 255, 255);
